--- a/index.html
+++ b/index.html
@@ -1623,24 +1623,25 @@
         asisAn: {
           inf: 'Java · Android Studio · UI/UX Design',
           tit: 'Oriøn Assistant (Android)',
-          con: `The idea started after Google released their assistant as I wasn't able to use it. 
-                At first I made a web browser app that detected commands and then continued adding more utilities. 
-                <br><br> 
-                After leaving the app for some time I decided to rename it and give it a modern design in Android Studio. 
-                At the moment it has music and video players, a photo vault, notes, a browser, a QR scanner and a utility to send data to the PC version of the app.`,
+          con: `Oriøn Assistant for Android is an app filled with useful smaller apps such as a music player or a QR scanner.
+                <br><br>
+                At first, the idea started as a simple web browser that detected commands and helped with gaming tasks.
+                After forgetting it for some time, I decided to rename it and give it a modern design with Android Studio. 
+                At the moment it has music and video players, a photo vault, notes, a browser, a QR scanner and an app to send data to the Windows version of the app.`,
           b1: 'Download v1.8.0'
         },
         asisPC: {
           inf: 'CMD · HTML · CSS · JS · NodeJS · ElectronJS · VS Code · UI/UX Design',
           tit: 'Oriøn Assistant (Windows)',
-          con: `Some years ago I used to carry my apps and games on a USB to be able to use them everywhere.
-                Since plugging in a drive changes it's letter shortcuts break, so I had to come up with a solution which ended up being a cmd launcher.
+          con: `Oriøn Assistant for Windows is an app launcher with support for custom themes and HTML apps called modules.
                 <br><br>
-                After that I wanted to go a bit further with a UI so I started the Oriøn Launcher project using Electron.js. 
-                After some updates I decided to rename it to Oriøn Assistant to match the mobile app and added compatibility between them.
-                Inspite of the apps that come installed like the games library, there is support for modules so everyone can make their own.`,
+                I like to carry my apps on a USB but plugging drives in different computers changes their letter and shortcuts break, so I had to come up with a solution.
+                The first iteration of the assistant was a command line app that replaced path letters with "?:\\", which would use the drive it was installed on.
+                <br><br>
+                After that I wanted to go further with a UI, so I started a new version called Oriøn Launcher using Electron.js. 
+                Some updates later I renamed it to Oriøn Assistant to match the Android app and added compatibility between them.`,
           b1: 'Oriøn Assistant',
-          b2: 'Batch Launchers'
+          b2: 'Batch Launcher'
         },
         frame: {
           inf: 'HTML · CSS · JS · VS Code · UI/UX Design',
@@ -1657,9 +1658,7 @@
           con: `One day I came across a streetwear hoodie, a new style of clothing I had never seen, and I got inspired to create my own.
                 It isn't exactly streetwear but it's indeed a futuristic hoodie design.
                 I started by sketching some designs in my notebook which were then digitalized using Adobe Illustrator.
-                Then I made a preview in Photoshop of how the hoodie would look like if it was real.
-                <br><br>
-                I am planning on printing it, but summer is starting at the time of writing this so I'll have to wait until it gets colder.`
+                Then I made a preview in Photoshop of how the hoodie would look like if it was real.`
         },
         mod:{
           inf: '3D Modeling · 3D Printing · Illustrator · Sketching · DIY',
@@ -1670,7 +1669,7 @@
                 I printed a deathclaw figure and made a large rock model to place inside the case.
                 Then I continued sketching the exterior pieces, which are Cyberpunk 2077 inspired, to later 3D model and print them.
                 <br><br>
-                After I printing them, I painted and placed them on my PC.`
+                After printing them, I painted and placed them on my PC.`
         },
         usb:{
           inf: '3D Modeling · 3D Printing · Electronics · DIY',
@@ -1682,12 +1681,11 @@
                 Finally, I put a thermal pad and an aluminium plate, which was later painted, to dissipate heat from the memory.`
         },
         dis:{
-          inf: 'JS · VS Code · Audition · Discord API',
+          inf: 'JS · VS Code · Discord API',
           tit: 'Discord Bots',
-          con: `After checking out the cool things you can do with discord bots I got the idea of creating my own.
+          con: `I've created two discord bots. The first one, Syrup, is a simple bot capable of moderating a server and providing simple games for people to enjoy.
                 <br><br>
-                At first I created a simple bot called Syrup and, after becoming better at making them, I created a more advanced version called Coscu.
-                This new version could jump into a call with people and play sounds so I used Adobe Audition to make them sound better.`,
+                After Syrup came Coscu, a more advanced bot capable of the same and more. This new version could jump into a call with people and play custom sounds and music.`,
           b1: 'Syrup Repository'
         },
         t45:{
@@ -1709,7 +1707,7 @@
         vapor:{
           inf: 'Unity · VS Code · Illustrator · Photoshop',
           tit: "Vaporcade",
-          con: `Vaporcade is a vaporwave themed arcade game in which you control a spaceship and score points by shooting. 
+          con: `Vaporcade is a vaporwave themed arcade indie game in which you control a spaceship and score points by shooting. 
                 <br><br>
                 Vaporcade is divided by waves. In each wave you'll find new enemies and, for every odd wave, a boss will appear.`,
           b1:  "Download Vaporcade"
@@ -1822,24 +1820,25 @@
         asisAn: {
           inf: 'Java · Android Studio · Diseño UI/UX',
           tit: 'Assistente Oriøn (Android)',
-          con: `La idea comenzó después de que Google sacase su asistente ya que yo no lo podía usar. 
-                Primero creé un buscador web que detectaba comandos para posteriormente añadirle más utilidades. 
-                <br><br> 
-                Tras dejar la app durante un tiempo decidí renombrarla y darle un diseño moderno en Android Studio. 
-                Actualmente la app tiene reproductores de música y video, una caja fuerte de fotos, notas, un buscador, un lector de QR y una manera de pasar datos a la versión de PC de la app.`,
+          con: `Oriøn Assistant para Android es una app llena de apps más pequeñas como un reproductor de música o un lector de QR.
+                <br><br>
+                Al principio, la idea comenzó como un buscador web simple que detectába comandos y ayudaba con tareas de juegos.
+                Tras olvidarla por un tiempo, decidí renombrarla y darle un diseño moderno con Android Studio.
+                Actualmente la app tiene reproductores de música y video, un bunquer de fotos, notas, un buscador, un lector de QR y una app para pasar datos a la versión de Windows de la app.`,
           b1: 'Descargar v1.8.0'
         },
         asisPC: {
           inf: 'CMD · HTML · CSS · JS · NodeJS · ElectronJS · VS Code · Diseño UI/UX',
-          tit: 'Assistente Oriøn (Windows)',
-          con: `Hace unos años solía llevar mis apps y juegos en un USB para poder usarlos en cualquier lugar.
-                Cómo conectar un disco cambia su letra los accesos directos se rompen, por lo que tuve que pensar en una solución que acabó siendo un launcher cmd.
+          tit: 'Oriøn Assistant (Windows)',
+          con: `Oriøn Assistant para Windows es un launcher de apps con soporte para temas y apps HTML custom llamadas módulos.
                 <br><br>
-                Después de crearlo, quise ir un poco más allá con una UI, así que comencé el proyecto del Launcher Oriøn usando Electron.js.
-                Después de algunas actualizaciones, decidí cambiarle el nombre a Asistente Oriøn para que coincidiera con la app móvil y añadí compatibilidad entre ellas.
-                A pesar de las aplicaciones que vienen instaladas como la biblioteca de juegos, tiene soporte para módulos para que todo el mundo pueda crear las suyas.`,
+                Suelo llevar mis apps en un USB pero al conectarlo a diferentes ordenadores la letra cambia y los accesos directos se rompen, por lo que tuve que llegar a una solución.
+                La primera iteración del asistente era una app de comandos que reemplaza la letra de las rutas con "?:\\", lo que usaría el disco donde estaba instalado.
+                <br><br>
+                Tras esto quise ir más allá con una UI, por lo que comencé una nueva versión llamada Oriøn Launcher con Electron.js.
+                Algunas actualizaciones después lo renombré a Oriøn Assistant para que coincidiera con la app de Android y añadí compatibilidad entre ellas.`,
           b1: 'Asistente Oriøn',
-          b2: 'Launchers Batch'
+          b2: 'Launcher Batch'
         },
         frame: {
           inf: 'HTML · CSS · JS · VS Code · Diseño UI/UX',
@@ -1856,9 +1855,7 @@
           con: `Un día me encontré con una sudadera streetwear, un estilo que no había visto antes, y me inspiró para crear la mía.
                 No es exactamente streetwear, pero sí es una sudadera futuristica.
                 Comencé dibujando unos diseños en mi cuaderno que fueron digitalizados más tarde usando Adobe Illustrator.
-                Tras eso, hice una simulación en Photoshop de como se vería la sudadera si fuese real.
-                <br><br>
-                Estoy planeando imprimirla pero el verano se acerca mientras escribo esto, por lo que tendré que esperar a que haga un poco de frío.`
+                Tras eso, hice una simulación en Photoshop de como se vería la sudadera si fuese real.`
         },        
         mod:{
           inf: 'Modelado 3D · Impresión 3D · Illustrator · Dibujo · Manualidades',
@@ -1881,12 +1878,11 @@
                 Finalmente, le añadí una almohadilla térmica y una placa de aluminio, la cual pinté más tarde, para disipar el calor de la memoria.`
         },
         dis:{
-          inf: 'JS · VS Code · Audition · API de Discord',
+          inf: 'JS · VS Code · API de Discord',
           tit: 'Bots de Discord',
-          con: `Tras ver las cosas que se pueden hacer con bots de discord tuve la idea de crear el mio.
+          con: `He creado dos bots de discord. El primero, Syrup, es un bot simple capaz de moderar un servidor y proveer juegos simples para que la gente se divierta.
                 <br><br>
-                Primero creé un bot simple llamado Syrup y, después de mejorar, creé una versión más avanzada llamada Coscu.
-                Esta nueva versión podía entrar en llamadas con gente y reproducir sonidos, por lo que usé Adobe Audition para hacerlos sonar mejor.`,
+                Después de Syrup llegó Coscu, un bot más avanzado capaz de lo mismo y más. Esta nueva versión podría entrar en llamadas con gente y reproducir sonidos personalizados y música.`,
           b1: 'Repositorio de Syrup'
         },
         t45:{
@@ -1908,7 +1904,7 @@
         vapor:{
           inf: 'Unity · VS Code · Illustrator · Photoshop',
           tit: "Vaporcade",
-          con: `Vaporcade es un juego de arcade con temática de vaporwave en el que controlas una nave y ganas puntos disparando.  
+          con: `Vaporcade es un juego de arcade indie con temática de vaporwave en el que controlas una nave y ganas puntos disparando.  
                 <br><br>
                 Vaporcade esta dividido por oleadas. En cada oleada encontraras nuevos enemigos y, por cada oleada impar, un jefe aparecerá.`,
           b1:  "Descargar Vaporcade"
