--- a/index.html
+++ b/index.html
@@ -1792,7 +1792,7 @@
         desc1: "¡Hola! Mi nombre es Alejandro, pero me puedes llamar Alex. Soy un desarrollador español al que le encanta hacer juegos indies al igual que aplicaciones multiplataforma y diseñar paginas web e interfaces responsivas.",
         desc2: "Soy una persona independiente y bien organizada que encuentra resolver problemas fácil y a quien le encanta dar su propio toque. Algunos de mis intereses son crear juegos y aplicaciones pero tambien me gusta la impresión 3D y los proyectos manuales.",
         s: '¡Ver mis habilidades!',
-        names: ['Artyom',,
+        names: ['Artyom',
                 'Islas Canarias',
                 'Gato Durmiendo',
                 'Finisterre',
@@ -1825,7 +1825,7 @@
         },
         asisAn: {
           inf: 'Java · Android Studio · Diseño UI/UX',
-          tit: 'Assistente Oriøn (Android)',
+          tit: 'Oriøn Assistant (Android)',
           con: `Oriøn Assistant para Android es una app llena de apps más pequeñas como un reproductor de música o un lector de QR.
                 <br><br>
                 Al principio, la idea comenzó como un buscador web simple que detectába comandos y ayudaba con tareas de juegos.
